<resources>
    <string name="app_name">听写</string>
    <string name="add_view_words">Add/view words</string>
    <string name="start_resume">Start/Resume</string>
    <string name="datepicker">datePicker</string>
    <string name="title_activity_word">Quiz words</string>
    <string name="speech_settings">Speech settings</string>
    <string name="title_activity_question">Question</string>
    <string name="show_answer">Show Answer</string>
    <string name="question_instructions">Draw your answer below, then tap Show Answer.</string>
    <string name="answer">Answer</string>
    <string name="answer_query">Did you write these correctly?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1500181530138959</string>

    <string name="no_groups">You are not a member of any group.</string>
    <string name="no_friends">You don\'t have any friends yet.\nGo to "Pending Requests" to add a friend and share quizzes.</string>
    <string name="no_shares">You haven\'t shared this quiz with any friends.\nTap the + button to share it with friends.</string>
    <string name="no_quizzes">You haven\'t added any quizzes.\nTap the + button to add a quiz.</string>
    <string name="no_words">You haven\'t added any words.\nTap the + button to add a word.</string>
    <string name="no_individual_requests_pending">You have no friend requests to others.\nTap the + button to add a friend and share quizzes.</string>
    <string name="no_individual_responses_pending">You have no friend requests from others.</string>
    <string name="help">Help</string>
    <string name="help_options">Help options</string>
    <string name="play_demo_video">Play demo video on YouTube.</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="missing_sound">No sound?</string>
    <string name="hsk_lists">HSK lists</string>
    <string name="hsk1_words">View HSK1. Words 1–150.</string>
    <string name="hsk2_words">View HSK2. Words 151–300.</string>
    <string name="hsk3_words">View HSK3. Words 301–599.</string>
    <string name="hsk4_words">View HSK4. Words 600–1200.</string>
    <string name="hsk5_words">View HSK5. Words 1201–2500.</string>
    <string name="hsk6_words">View HSK6. Words 2501–5000.</string>
    <string name="erase">Erase</string>
    <string name="index">%d.\u0020</string>
    <string name="hsk_levels">HSK levels</string>
    <string name="no_pinyin">No pinyin</string>
    <string name="no_word">No Word</string>
    <string name="start_hsk1_quiz">Start/resume\nHSK1 quiz</string>
    <string name="start_hsk2_quiz">Start/resume\nHSK2 quiz</string>
    <string name="start_hsk3_quiz">Start/resume\nHSK3 quiz</string>
    <string name="start_hsk4_quiz">Start/resume\nHSK4 quiz</string>
    <string name="start_hsk5_quiz">Start/resume\nHSK5 quiz</string>
    <string name="start_hsk6_quiz">Start/resume\nHSK6 quiz</string>
    <string name="reset">Reset</string>
    <string name="remaining">%d/%d remaining</string>
    <string name="find_email">Find email</string>
    <string name="search_email">Search for email</string>
    <string name="your_email_address">(Your email address: %s)</string>
    <string name="enter_friend_email">Enter friend\'s email</string>
    <string name="friend_connect_instructions">To connect with your friend, enter her email address.</string>
    <string name="add_friend">Add a friend.</string>
    <string name="add_share">Add a friend to share.</string>
    <string name="username">%s</string>
    <string name="braces">(%s)</string>
    <string name="shared">Shared</string>
    <string name="email_zhiyong">Email Zhiyong (听写 app creator)</string>
    <string name="accept_or_reject">Accept or reject</string>
    <string name="share_with_all">Share with all    </string>
    <string name="errorQuizDownload">Error in downloading quizzes. Check your Internet connection or email yongish@gmail.com for help.</string>
    <string name="errorWordsDownload">Error in downloading words. Check your Internet connection or email yongish@gmail.com for help.</string>
    <string name="title_activity_group">Groups</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="members">Members</string>
    <string name="error_in_downloading_groups">Error in downloading groups.</string>
    <string name="add_a_group">Add a group</string>
    <string name="add_these_people">Add these people</string>
    <string name="title_activity_group_member">Group Members</string>
    <string name="add_group_user">Add a user to a group</string>
    <string name="error_downloading_group_members">Error in downloading group members.</string>
    <string name="delete_group">Delete group</string>
    <string name="groups">Groups</string>
    <string name="error_in_groupmemberfragment">Error in GroupMemberFragment. Please contact yongish@gmail.com.</string>
    <string name="error_in_addgroupmemberfragment">Error in AddGroupMemberFragment. Please contact yongish@gmail.com.</string>
    <string name="entered_invalid_email">You entered an invalid email. Try again.</string>
    <string name="enter_user_email_here">Enter user\'s email here</string>
    <string name="enter_users_email">Enter user\'s email</string>
    <string name="select_role">Select role</string>
    <string name="submit">Submit</string>
    <string name="member">Member</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="error_in_addquizindividualfragment">Error in AddQuizIndividualFragment. Please email yongish@gmail.com.</string>
    <string name="error_in_shareindividualfragment">Error in ShareIndividualFragment. Please contact yongish@gmail.com.</string>
    <string name="no_group_memberships">The user is not a member of any group.</string>
    <string name="error_in_groupmembershipfragment">Error in GroupMembershipFragment. Please contact yongish@gmail.com.</string>
    <string name="individual">Individual</string>
    <string name="group">Group</string>
    <string name="error_in_addquizgroupfragment">Error in AddQuizGroupFragment. Please contact yongish@gmail.com.</string>
    <string name="single_person">Single person</string>
    <string name="all_members_of_a_group">All members of a group</string>
    <string name="error_in_exercisetypefragment_please_contact_yongish_gmail_com">Error in ExerciseTypeFragment. Please contact yongish@gmail.com.</string>
    <string name="error_in_downloading_exercise_types">Error in downloading exercise types</string>
    <string name="profile">Profile</string>
    <string name="exercises">Exercises</string>
    <string name="open">Open</string>
    <string name="toggle_pinyin">Toggle pinyin</string>
    <string name="underline_characters">Underline characters</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
</resources>
