<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhiyong.tingxie.ui.main.MainActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:onClick="logout"
        android:icon="@drawable/ic_exit_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        android:onClick="openHelp"
        android:icon="@drawable/ic_help_outline_white_24dp"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/action_friends"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/friends"-->
<!--        android:onClick="openFriends"-->
<!--        android:icon="@drawable/ic_people_white_24dp"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/speech_settings"
        android:onClick="openSpeechSettings"
        android:icon="@drawable/ic_audiotrack_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hsk"
        android:orderInCategory="100"
        android:title="@string/hsk_lists"
        android:onClick="openHskLists"
        android:icon="@drawable/ic_audiotrack_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
