<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_membership"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    tools:context=".ui.group_membership.GroupMembershipFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_group_memberships"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layoutManager="LinearLayoutManager"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_group_memberships"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/network_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/error_downloading_group_members"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/other_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/error_in_groupmembershipfragment"
        android:textColor="@color/white"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>